--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "main": "./lib",
   "dependencies": {
     "passport-strategy": "1.x.x",
-    "oauth": "0.9.x",
+    "oauth": "git://github.com/ciaranj/node-oauth",
     "uid2": "0.0.x"
   },
   "devDependencies": {
